# rtt-statistical-batteries

./: .gitignore  CMakeLists.txt  INSTALL  INSTALL.old  Makefile  README.md  buildall_linux.sh  buildall_mingw.sh  conanfile.txt  convert_bsi_result.ipynb
bis-src/: CMakeLists.txt
bis-src/app/: main.cpp
bis-src/app/include/: bsi_params.hpp
bis-src/include/: bis.hpp
bis-src/src/: main.cpp  t1_monobit.hpp  t2_poker.hpp  t7_homogenity.hpp  t8_entropy.hpp
bsi-src/: .gitignore  CMakeLists.txt  README.md  buildall.sh
bsi-src/app/: main.cpp
bsi-src/app/include/: bsi_params.hpp
bsi-src/cmake/toolchain/: zig_linux_x64.cmake  zig_macos_x64.cmake  zig_windows_x64.cmake
bsi-src/conan_profiles/: zig_macos_arm64.profile  zig_windows_x64.profile
bsi-src/include/: bsi.hpp
bsi-src/src/: bsi.cpp  t3_runs.hpp  t4_long_run.hpp  t5_autocorrelation.hpp  t6_uniform_distribution.hpp
dieharder-src/: .gitignore  CMakeLists.txt  Makefile  README  conanfile.txt  config.h.in
dieharder-src/dieharder/: CMakeLists.txt  dieharder.h  output.c  user_template.c
dieharder-src/dieharder-3.31.1/: CMakeLists.txt  Makefile.in  configure
dieharder-src/dieharder-3.31.1/dieharder/: CMakeLists.txt  Makefile.am  Makefile.in  globals.c
dieharder-src/dieharder-3.31.1/include/: Makefile  Makefile.in
dieharder-src/dieharder-3.31.1/include/dieharder/: Dtest.h  Xtest.h  brg_types.h  dab_filltree.h  dab_filltree2.h  dab_monobit2.h  diehard_bitstream.h  diehard_count_1s_byte.h  diehard_opso.h  diehard_rank_6x8.h  diehard_runs.h  diehard_squeeze.h  dieharder_rng_types.h  dieharder_test_types.h  libdieharder.h  marsaglia_tsang_gorilla.h  rgb_lmn.h  rgb_operm.h  rgb_permutations.h  rgb_timing.h  rijndael-alg-fst.h  std_test.h  sts_runs.h  sts_serial.h  tests.h
dieharder-src/dieharder-3.31.1/libdieharder/: CMakeLists.txt  Makefile.am  Makefile.in  diehard_count_1s_byte.c  diehard_dna.c  diehard_parking_lot.c  diehard_runs.c  diehard_sums.c  dieharder_rng_types.c  kstest.c  random_seed.c  rgb_lmn.c  rgb_persist.c  rng_ca.c  rng_dev_random.c  rng_dev_urandom.c  rng_file_input_raw.c  rng_superkiss.c  rng_threefish.c  rngs_gnu_r.c  std_test.c  sts_monobit.c  sts_runs.c  sts_serial.c
dieharder-src/dieharder-3.31.1/libdieharder/bauer/: rng_aes.c  rng_threefish.c  skein_block64.c  skein_block_ref.c
dieharder-src/dieharder-3.31.1/manual/: Makefile.in
dieharder-src/dieharder-3.31.1/patches/: dieharder-pvalue-print.patch
dieharder-src/include/dieharder/: Vtest.h  dab_bytedistrib.h  dab_dct.h  dab_filltree.h  dab_filltree2.h  diehard_2dsphere.h  diehard_3dsphere.h  diehard_birthdays.h  diehard_count_1s_stream.h  diehard_craps.h  diehard_dna.h  diehard_operm5.h  diehard_oqso.h  diehard_parking_lot.h  diehard_rank_32x32.h  diehard_sums.h  dieharder_rng_types.h  dieharder_test_types.h  libdieharder.h  marsaglia_tsang_gcd.h  parse.h  rgb_bitdist.h  rgb_kstest_test.h  rgb_lagged_sums.h  rgb_lmn.h  rgb_minimum_distance.h  rgb_operm.h  rgb_persist.h  static_get_bits.h  sts_monobit.h  verbose.h
dieharder-src/include/dieharder/bauer/: skein.h  skein_port.h
dieharder-src/libdieharder/: CMakeLists.txt  Vtest.c  Xtest.c  bits.c  chisq.c  dab_bytedistrib.c  dab_dct.c  dab_filltree.c  dab_filltree2.c  dab_monobit2.c  diehard_2dsphere.c  diehard_3dsphere.c  diehard_birthdays.c  diehard_bitstream.c  diehard_count_1s_byte.c  diehard_count_1s_stream.c  diehard_craps.c  diehard_dna.c  diehard_operm5.c  diehard_opso.c  diehard_oqso.c  diehard_rank_32x32.c  diehard_rank_6x8.c  diehard_runs_working.c  diehard_squeeze.c  dieharder_test_types.c  marsaglia_tsang_gcd.c  marsaglia_tsang_gorilla.c  prob.c  rank.c  rgb_bitdist.c  rgb_kstest_test.c  rgb_lagged_sums.c  rgb_minimum_distance.c  rgb_operm.c  rgb_permutations.c  rgb_persist.c  rgb_timing.c  rijndael-alg-fst.c  rng_XOR.c  (+13 more)
fips-src/: .gitignore  CMakeLists.txt  README.md  conanfile.txt
fips-src/app/: main.cpp
fips-src/app/include/: fips_params.hpp  params.h  results.hpp
fips-src/cmake/toolchain/: zig.cmake  zig_macos_arm64.cmake  zigc++  zigcc
fips-src/conan_profiles/: zig.profile  zig_linux_x64.profile  zig_macos_x64.profile
fips-src/include/: fips.h
fips-src/src/: fips.c  main.cpp
fips-src/src/include/: common.h  params.h  results.h
nist-sts-src/: .gitignore  CMakeLists.txt  NIST.sln  README.md  README.txt  conanfile.txt  makefile
nist-sts-src/Debug/: NIST.ilk
nist-sts-src/cmake/: add_fftw.cmake  build_external_project.cmake  options.cmake
nist-sts-src/experiments/: create-dir-script
nist-sts-src/include/: BM.h  BMA.h  config.h  decls.h  defs.h  erf.h  externs.h  generators.h  genutils.h  matrix.h  stat_fncs.h  tools.h  utilities.h
nist-sts-src/src/: BM.c  BMA.c  LUTs.c  NIST-STS-optimised v5 license.txt  NIST-STS-optimised version 2 license.txt  NIST.vcxproj  NIST.vcxproj.filters  approximateEntropy.c  assess.c  blockFrequency.c  cephes.c  cusum.c  dfft.c  discreteFourierTransform.c  erf.c  frequency.c  generators.c  genutils.c  linearComplexity.c  longestRunOfOnes.c  main.c  matrix.c  nonOverlappingTemplateMatchings.c  overlappingTemplateMatchings.c  randomExcursions.c  randomExcursionsVariant.c  rank.c  runs.c  serial.c  tools.c  universal.c  utilities.c
nist-sts-src/src/Debug/: vc140.idb
nist-sts-src/src/Debug/NIST.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  NIST.lastbuildstate  link.command.1.tlog  link.read.1.tlog  (+1 more)
testu01-src/TestU01-1.2.3/: CMakeLists.txt  Makefile.in  configure  configure.ac
testu01-src/TestU01-1.2.3/doc/: Makefile.in
testu01-src/TestU01-1.2.3/examples/: Makefile.in
testu01-src/TestU01-1.2.3/include/: Makefile.in  config.h.in
testu01-src/TestU01-1.2.3/mylib/: CMakeLists.txt  Makefile.in
testu01-src/TestU01-1.2.3/param/: Makefile.in
testu01-src/TestU01-1.2.3/probdist/: CMakeLists.txt  Makefile.in
testu01-src/TestU01-1.2.3/testu01/: CMakeLists.txt  Makefile.in  bbattery.c
testu01-src/cli_wrapper/: CMakeLists.txt  README
testu01-src/cli_wrapper/include/: FileStreamGen.h
testu01-src/mylib/: CMakeLists.txt
testu01-src/mylib/src/: chrono.c  gdef.c
testu01-src/testu01/: CMakeLists.txt
(+447 files in other folders)
